--- a/templates/contacts/contactimport_preview.haml
+++ b/templates/contacts/contactimport_preview.haml
@@ -29,7 +29,7 @@
                   &nbsp;
                 %td.field-form-label.flex-grow
                   %div.pr-4
-                    <b>{{ column.header|title }}</b>
+                    <b>{{ column.header }}</b>
                     -trans "column as"
                 %td.field-as-name.pt-3
                   -if column.controls
