--- a/templates/channels/types/webchat/config.haml
+++ b/templates/channels/types/webchat/config.haml
@@ -34,7 +34,8 @@
           chatButtonHeight: {{ channel.config.chat_button_height }},
           sidePadding: {{ channel.config.side_padding }},
           bottomPadding: {{ channel.config.bottom_padding }},
-          sideOfScreen: '{{ channel.config.side_of_screen }}'
+          sideOfScreen: '{{ channel.config.side_of_screen }}',
+          googleFont: '{{ channel.config.google_font }}'
         },
         meta: {
           icon: {
