--- a/templates/contacts/contactimport_preview.haml
+++ b/templates/contacts/contactimport_preview.haml
@@ -1,13 +1,13 @@
--extends "smartmin/base.html"
+-extends "smartmin/update.html"
 -load smartmin temba i18n
 
 -block title
   -trans "Preview Contact Import"
 
 -block content
-  -blocktrans
-    We noticed your file contains some extra columns to import, you can add these as custom fields on
-    your contact by selecting them below.
+  -blocktrans trimmed with count=object.num_records
+    This import file contains <strong>{{ count }}</strong> records. Headers that didn't match existing fields
+    can be ignored or added as new custom fields by editing them below.
 
   .card.w-full
     %form.smartmin-form.horizontal-form(method="post" enctype="multipart/form-data")
@@ -20,29 +20,38 @@
         %fieldset
           %table
             -for column in form.columns
-              %tr.custom-field.flex.w-full.items-center
-                %td.field-include-checkbox.mt-2.flex-none
+              %tr.mapping.w-full.items-center
+                %td.mapping-include.p-1
                   -if column.controls
                     {% render_field column.controls.0 %}
+                  -elif column.mapping.type == "ignore"
+                    %fa-icon.far.fa-square.disabled-checkbox(size="16px" path-prefix="/sitestatic")
                   -else
-                    %fa-icon.far.fa-check-square(size="16px" path-prefix="/sitestatic")
-                  &nbsp;
-                %td.field-form-label.flex-grow
-                  %div.pr-4
-                    <b>{{ column.header }}</b>
-                    -trans "column as"
-                %td.field-as-name.pt-3
-                  -if column.controls
-                    {% render_field column.controls.1 %}
+                    %fa-icon.far.fa-check-square.disabled-checkbox(size="16px" path-prefix="/sitestatic")
+                %td.mapping-header.p-1.pr-4
+                  <b>{{ column.header }}</b>
+                %td.mapping-as.p-1
+                  -if column.mapping.type == "ignore"
+                    -trans "will be ignored"
                   -else
-                    {{ column.mapping.name }}
-                %td.field-form-label.for-type.flex-none
-                  %div.px-4
-                    -blocktrans
-                      of type
-                %td.field-as-type.for-type.flex-none.pt-3
-                  -if column.controls
-                    {% render_field column.controls.2 %}
+                    -trans "as"
+                    -if column.mapping.type == "new_field"
+                      -trans "new field"
+                      .name-control
+                        {% render_field column.controls.1 %}
+                      -trans "of type"
+                      .value-type-control
+                        {% render_field column.controls.2 %}
+                    -elif column.mapping.type == "field"
+                      -trans "field"
+                      %strong
+                        {{ column.mapping.name }}
+                    -elif column.mapping.type == "scheme"
+                      -blocktrans trimmed with scheme=column.mapping.scheme
+                        a <strong>{{ scheme }}</strong> URN
+                    -else
+                      %strong
+                        {{ column.mapping.name }}
 
       .flex.mt-4
         %input.button-primary(type="submit" value='{% trans "Import" %}')
@@ -52,32 +61,25 @@
 
 -block extra-style
   :css
-    #customize-info {
-      font-weight: bold;
+    .mapping .disabled-checkbox {
+      --fa-icon-fill-color: #CCC;
     }
-
-    .field-as-type {
-      width: 120px;
+    .mapping .checkbox-label {
+      display: none;
     }
-
-    .field-form-label div {
+    .mapping .inline-block {
+      padding: 0 5px;
     }
-    .field-as-name  {
+    .mapping .control-group {
+      margin-bottom: 0;
+    }
+    .mapping .name-control {
+      display: inline-block;
       width: 200px;
+      margin: 0 3px;
     }
-
-    .field-as-type {
-       width: 120px;
-    }
-
-    .field-as-type, .field-as-name {
-
-    }
-
-    .field-form-label {
-
-    }
-
-    .for-type {
-
+    .mapping .value-type-control {
+      display: inline-block;
+      width: 120px;
+      margin: 0 3px;
     }
