--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -22,7 +22,7 @@
 
         .left
           -if org_perms.contacts.contact_import
-            .button-primary{ onclick:"goto(event)", href:"{% url 'contacts.contact_import' %}"}
+            .button-primary(onclick="goto(event)" href="{% url 'contacts.contactimport_create' %}")
               -trans "Import Contacts"
 
           .lp-nav.upper
