--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -21,7 +21,7 @@
       .lp-frame
 
         .left
-          -if org_perms.contacts.contact_import
+          -if org_perms.contacts.contactimport_create
             .button-primary(onclick="goto(event)" href="{% url 'contacts.contactimport_create' %}")
               -trans "Import Contacts"
 
