--- a/templates/public/public_welcome.haml
+++ b/templates/public/public_welcome.haml
@@ -98,7 +98,7 @@
             texts with that keyword will automatically be registered into the group.
 
         .mt-6
-          .button-primary.lift.inline-block.mr-1.mb-1(href="{% url 'contacts.contact_import' %}" onclick="goto(event)")
+          .button-primary.lift.inline-block.mr-1.mb-1(href="{% url 'contacts.contactimport_create' %}" onclick="goto(event)")
             -trans "Import Contacts"
           %temba-modax.inline-block.mb-1(endpoint="{% url 'contacts.contact_create'%}" header='{{_("Create Contact")|escapejs}}')
             .button-light.lift.inline-block.mr-1{href:"{% url 'contacts.contact_list' %}#contact"}
