Fixes RC bot creation instruction (only "bot" role is needed)

--- a/templates/channels/types/rocketchat/claim.haml
+++ b/templates/channels/types/rocketchat/claim.haml
@@ -14,7 +14,7 @@
         On your RocketChat, go to <i>Administration > Omnichannel</i> and enable it.
     %li
       -blocktrans trimmed
-        Add a new user with "user" and "bot" roles (<i>Administration > Users > <b>"New"</b></i>)
+        Add a new user with the "bot" role (<i>Administration > Users > <b>"New"</b></i>)
     %li
       -blocktrans trimmed with brand=brand.name
         Install the app <b> {{ brand }} Channel Integration </b> (<i>Administration > Marketplace </i>)
