--- a/templates/contacts/contactimport_read.haml
+++ b/templates/contacts/contactimport_read.haml
@@ -10,9 +10,9 @@
       .card
         .import-result.text-lg.mt-2
           -if is_finished
-            .icon-checkmark.text-success.mr-2
+            .icon.icon-checkmark.text-success.mr-2
           -else
-            .icon-loop.mr-2.text-gray-400.spin
+            .icon.icon-loop.mr-2.text-gray-400.spin
 
           -blocktrans trimmed count info.num_created as count
             Created {{ count }} new contact
@@ -21,9 +21,9 @@
 
         .import-result.text-lg.mt-2
           -if is_finished
-            .icon-checkmark.text-success.mr-2
+            .icon.icon-checkmark.text-success.mr-2
           -else
-            .icon-loop.mr-2.text-gray-400.spin
+            .icon.icon-loop.mr-2.text-gray-400.spin
 
           -blocktrans trimmed count info.num_updated as count
             Updated {{ count }} existing contact
@@ -32,17 +32,17 @@
 
         -if is_finished
           .import-result.text-lg.mt-2
-            .icon-checkmark.text-success.mr-2
+            .icon.icon-checkmark.text-success.mr-2
 
             {% url 'contacts.contact_filter' object.group.uuid as group_url %}
             -blocktrans trimmed count info.num_created|add:info.num_updated as count with group_url=group_url group_name=object.group.name
-              Added {{ count }} existing contact to <a href="{{ group_url }}">{{ group_name }}</a>
+              Added {{ count }} contact to the <a href="{{ group_url }}">{{ group_name }}</a> group
               -plural
-                Added {{ count }} existing contacts to <a href="{{ group_url }}">{{ group_name }}</a>
+                Added {{ count }} contacts to the <a href="{{ group_url }}">{{ group_name }}</a> group
 
         -if info.num_errored
           .import-result.text-lg.mt-2
-            .icon-warning.text-error.mr-2
+            .icon.icon-warning.text-error.mr-2
             -blocktrans trimmed count info.num_errored as count
               Ignored {{ count }} record because of errors
               -plural
@@ -66,6 +66,7 @@
       max-width: 1024px;
     }
 
-    .import-result .spin {
-      animation: rotation 2s infinite linear;
+    .import-result .icon {
+      width: 16px;
+      height: 16px;
     }
