--- a/templates/channels/types/whatsapp/config.haml
+++ b/templates/channels/types/whatsapp/config.haml
@@ -1,9 +1,9 @@
 -load i18n
 
--blocktrans
+-blocktrans trimmed
   Your WhatsApp channel is now connected, you should be able to send and receive messages as normal.
 
--blocktrans
+-blocktrans trimmed
   In the case of a new WhatsApp install or replacement of an existing WhatsApp channel you may need to refresh
   the contacts on the WhatsApp application. This may take a few minutes.
 
